src/layout/nav/_nav.scss
@use '../../scss/globals' as *;

.nav-list {
  display: flex;
  gap: 18px;

  .nav-item {
    text-transform: uppercase;
    padding: 8px;

    &:focus-visible {
      @include outline;
    }

    &:hover,
    &.active {
      color: $color-gray-70;
      padding-bottom: 4px;
      border-bottom: 2px solid currentcolor;
    }
  }
}

@mixin collapsed-styles {
  width: rem(61px);

  .nav-text {
    opacity: 0;
    visibility: hidden;
  }
}

.admin-nav {
  flex-grow: 1;

  .btn-ghost {
    position: absolute;
    z-index: 3;
    background-color: $color-gray-40;
    height: rem(60px);
    padding: 2px;
    top: 50%;
    transform: translate(-50%);
    right: -21px;
  }

  .nav-list {
    flex-direction: column;
    gap: 0;

    .nav-item {
      font-size: rem(16px);
      text-transform: none;
      width: 100%;
      display: flex;
      gap: 20px;
      padding: 20px;

      @include transition;

      &:hover,
      &.active {
        background-color: $color-gray-70;
        color: $color-white;
        border: 0;
      }

      &:focus-visible {
        outline: transparent;
        background-color: $color-gray-70;
        color: $color-white;

        &.active {
          background-color: $color-gray-80;
        }
      }
    }
  }
}

